--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -52,10 +52,10 @@
       <p>Download PDF <a href=" {{ post.pdfurl }} "><u>here</u></a></p>
     {% endif %}
     {% if post.journalurl %}
-      <p>Link to <a href=" {{ post.jorunalurl }} "><u>journal</u></a></p>
+      Link to <a href=" {{ post.jorunalurl }} "><u>journal</u></a>
     {% endif %}
     {% if post.pdfurl %}
-      <p>Link to <a href=" {{ post.arxivurl }} "><u>arXiv</u></a></p>
+      Link to <a href=" {{ post.arxivurl }} "><u>arXiv</u></a>
     {% endif %}
 
 
