--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -52,7 +52,7 @@
       <p>Download PDF <a href=" {{ post.pdfurl }} "><u>here</u></a></p>
     {% endif %}
     {% if post.journalurl %}
-      Link to <a href=" {{ post.jorunalurl }} "><u>journal</u></a>
+      Link to <a href=" {{ post.journalurl }} "><u>journal</u></a>
     {% endif %}
     {% if post.pdfurl %}
       Link to <a href=" {{ post.arxivurl }} "><u>arXiv</u></a>
