--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -51,9 +51,9 @@
     {% if post.pdfurl %}
       <p>Download PDF <a href=" {{ post.pdfurl }} "><u>here</u></a></p>
     {% endif %}
-    
+
     {% if post.journalurl and post.arxivurl%}
-      </p>Link to <a href=" {{ post.journalurl }} "><u>journal</u></a>, <a href=" {{ post.arxivurl }} "><u>arXiv</u></a></p>
+      <p>Link to <a href=" {{ post.journalurl }} "><u>journal</u></a>, <a href=" {{ post.arxivurl }} "><u>arXiv</u></a></p>
     {% elsif post.journalurl %}
       <p>Link to <a href=" {{ post.journalurl }} "><u>journal</u></a></p>
     {% elsif post.arxivurl %}
