--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -48,15 +48,15 @@ layout: default
         {% endif %}
 
         {% if page.pdfurl %}
-          <p>Download PDF <a href=" {{ post.pdfurl }} "><u>here</u></a></p>
+          <p>Download PDF <a href=" {{ post.pdfurl }} ">here</a></p>
         {% endif %}
 
         {% if page.journalurl and page.arxivurl%}
-          <p>Link to <a href=" {{ page.journalurl }} "><u>journal</u></a>, <a href=" {{ page.arxivurl }} "><u>arXiv</u></a></p>
+          <p>Link to <a href=" {{ page.journalurl }} ">journal</a>, <a href=" {{ page.arxivurl }} "><u>arXiv</u></a></p>
         {% elsif page.journalurl %}
-          <p>Link to <a href=" {{ page.journalurl }} "><u>journal</u></a></p>
+          <p>Link to <a href=" {{ page.journalurl }} ">journal</a></p>
         {% elsif page.arxivurl %}
-          Link to <a href=" {{ page.arxivurl }} "><u>arXiv</u></a>
+          Link to <a href=" {{ page.arxivurl }} ">arXiv</a>
         {% endif %}
     
         </header>
