--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -34,9 +34,10 @@ layout: default
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time></p>
         {% endif %}
         
-        {% if page.venue and page.date %}
+        <!-- {% if page.venue and page.date %}
           <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif page.date %}
+         {% elsif page.date %}-->
+         {% if page.date %}
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
         
@@ -52,7 +53,7 @@ layout: default
         {% endif %}
 
         {% if page.journalurl and page.arxivurl%}
-          <p>Link to <a href=" {{ page.journalurl }} ">journal</a>, <a href=" {{ page.arxivurl }} "><u>arXiv</u></a></p>
+          <p>Link to <a href=" {{ page.journalurl }} ">journal</a>, <a href=" {{ page.arxivurl }} ">arXiv</a></p>
         {% elsif page.journalurl %}
           <p>Link to <a href=" {{ page.journalurl }} ">journal</a></p>
         {% elsif page.arxivurl %}
