--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -41,7 +41,9 @@ layout: default
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
         
-             
+        {% if page.imageurl %}
+          <img src="{{ page.imageurl }}">
+        {% end if %}
         {% if page.citation and page.paperurl %}
           <p>{{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
         {% elsif page.citation %}
