--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -52,7 +52,7 @@ layout: default
         {% endif %}
 
         {% if page.journalurl and page.arxivurl%}
-          <p>Link to <a href=" {{ page.journalurl }} ">journal</a>, <a href=" {{ page.arxivurl }} "><u>arXiv</u></a></p>
+          <p>Link to <a href=" {{ page.journalurl }} ">journal</a>, <a href=" {{ page.arxivurl }} ">arXiv</a></p>
         {% elsif page.journalurl %}
           <p>Link to <a href=" {{ page.journalurl }} ">journal</a></p>
         {% elsif page.arxivurl %}
